*android-file-transfer-3.1 (13 Apr 2017)

  13 Apr 2017; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +android-file-transfer-3.1.ebuild, -android-file-transfer-3.0.ebuild:
  sys-fs/android-file-transfer: version bump

*android-file-transfer-3.0 (25 Dec 2016)

  25 Dec 2016; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +android-file-transfer-3.0.ebuild, +metadata.xml:
  sys-fs/android-file-transfer: new ebuild