@@ -2,21 +2,22 @@
 Hash: SHA256
 
 DIST android-file-transfer-3.1.tar.gz 546978 SHA256 d6350e273fa18c3c6d9e0a65c620ec35f41ef7e926acdf423a454f597e4314ec SHA512 b924552f69e3b17808670e51b6351361cfab1cd48fe9002bd846282331e8ea99d8c183e0b3b8c37762cf7d7c3fc900b34e9e906239afc372a7d0aadaa9c5ab85 WHIRLPOOL 7912ba59ebe9ec6e6218fa2426722caa33a86aaad7ead594433b42d545b5db675c87e0816fd73ef03e2a23764a7fec255361863ce21b2de075821f41ea97c3a9
+DIST android-file-transfer-3.2.tar.gz 548831 SHA256 56d0ff8b5197a9089dd30533006fafb9a1b1c7a1e310a78d359ff00145107bcf SHA512 fd4c1c7a7a9d0bfd770a1a1ad253ac8861f1756401acf3c5c2190250ccd5d6be93705b18824cdfd858745251efedb1db6d1ea94c334e273d76a9869c656907ea WHIRLPOOL ee0ef42f1969d04042d9b9a6efd419f9182370f7d0f2d3326af503dd200887a3669650c73ecb12779368a4e4f2d61cb8fe25c2603054b1130755c2e54625ff2e
 -----BEGIN PGP SIGNATURE-----
 
-iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAljvbipfFIAAAAAALgAo
+iQKTBAEBCAB9FiEERMkDQjkszrVa22ISLwTjHwcgHn0FAllkzJ1fFIAAAAAALgAo
 aXNzdWVyLWZwckBub3RhdGlvbnMub3BlbnBncC5maWZ0aGhvcnNlbWFuLm5ldDQ0
 QzkwMzQyMzkyQ0NFQjU1QURCNjIxMjJGMDRFMzFGMDcyMDFFN0QACgkQLwTjHwcg
-Hn2EdBAAk4qfW66tgVC8ldptIQkuRf0jAAi44gLbGsVfpnY9yGZkHvrYXfm8Uo6u
-ZVKKGAbsBfkvyB8ziDjZAKMBLo9BGPKg/ygJTadbMsiMlZyZ/RxW1/DunoKLjEkq
-E3c7wQeCvwU661NUjq8HJpTvpsPoGkRiDVdiWsaUedHzvq9w5wy9mwrf9MlMcsOG
-wOGZYpGP4FWbm1spBf+fsP3UD6vuKpHxLdODVfAMIv6DtHIyGxQ81TdLR4OvAr94
-1+bUGgsb43Tt74HLeZfrQH1Kv4OX49NlgcKBCaIzzO6JQYty0Yyp3XbsFkXwYGWF
-aGl2dr1WOEqKJdTn9mpxGlPK5uXW//xwSZR3kU+hRJHZP8lbRDPk9UnePzFmMbJC
-km0oEyGoneyjEhU4YSob3rIFlXrJsU6dsy2t8iFSA0MTrLrjF1bP+ecd2ICWgU3n
-FDYf8qR7dDRuIB0+rHgGNEwRfoCPHCEmhghMkEpvCzi8oTh6oGCC/8PxBlp683jB
-847o5G1Z2+RE2SbcTIr6ZqxW75laEy24/8qAdx14svqHOIFQlRfX/3nWaruA6tu/
-xsoxWtdft9aVNAeqtpbpCZAOxUbiJfbn7c7goKeQGDh39I7qmU4lDqUhEwb8Df46
-0rk7OtTNQ79+A/9heO3co1pwD35HdwPgP1UeJFWB4wAs7wUA4JY=
-=8h0+
+Hn2+oRAA6qC+wp3AsOzTZXKtEglLyzs7gVIDrq01a481fv+mm/KxK8uvgvqnBWyK
+u1QFp+9BTeS74aBphvbLZJ+y1K0bmy1CKbD0iGVG5m4JcI3WLNDF3Rz7gN72IL8L
+5z7V36xO8BCBEMycP2azf89gFw77HN5cd2zdEQv9TwcaWo5gqE6sgKafQIIX4SL0
+xwuMpsKaUGGb5XXX6RzbZUhS+27xjeYLLvRsOt6oV7LKyxdYnYthVMeH2TdG4yF3
+BI1+1zTsBz9EAIdzWV9AMrzp5cHvHKah2PIX/dsnyPImTKbY6eK1PKLDLJ/xK7w9
+UAbmFq5U4VdrwMI6YMRY21vh7M7Kq8VTVr2OSAVoanbdMLBctuCL05R4nCwSUKiw
+6j1TtqDLmBCCVvMGZsBj00Wf5nybFUj/F2jxlFq/5osn6TWq6omWdWEA/L1Nj3G/
+NDqfGfczpmK3cP9C4k+gXM0dSAXOONMFOOoXwQIcJvIzHau16xQr2DE+btBNylUm
+PDhyAPASlk+06X/FoTkXmJ53idaqNQrXTeS1cUTJVG8eVo2G5zIcEIHMf8bkUQNG
+fDfSeDa6Hu2eKfwyRxFJGld+mVILX93T2gqjPDa3yDPU3vQjebOfGt/4sj0r+7rR
+UQkdaRkJtrsBFG6P7cYloTpkJCjcmmKlflBEzCNVvxARfajQPr0=
+=U2dR
 -----END PGP SIGNATURE-----
